--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "bcrypt": "^3.0.0",
     "body-parser": "~1.18.2",
     "connect-ensure-login": "^0.1.1",
-    "connect-mongo": "^2.0.1",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^2.0.1",
     "cookie-parser": "~1.4.3",
     "dotenv": "~4.0.0",
     "express": "~4.16.0",
     "express-session": "^1.15.6",
     "hbs": "~4.0.1",
+    "hoek": "^5.0.3",
     "mongoose": "~4.13.4",
     "morgan": "~1.9.0",
     "node-sass-middleware": "0.11.0",
@@ -26,6 +27,6 @@
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
-    "nodemon": "^1.12.1"
+    "nodemon": "^1.18.2"
   }
 }
