--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "hbs": "~4.0.1",
     "mongoose": "~4.13.4",
     "morgan": "~1.9.0",
+    "multer": "^1.3.1",
     "node-sass-middleware": "0.11.0",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
