--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "bcrypt": "^3.0.0",
     "body-parser": "~1.18.2",
+    "cloudinary": "^1.11.0",
     "connect-ensure-login": "^0.1.1",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.1",
@@ -20,6 +21,7 @@
     "mongoose": "~4.13.4",
     "morgan": "~1.9.0",
     "multer": "^1.3.1",
+    "multer-storage-cloudinary": "^2.2.1",
     "node-sass-middleware": "0.11.0",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
