--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "bcrypt": "^3.0.0",
     "body-parser": "~1.18.2",
+    "bootstrap": "^4.1.2",
     "cloudinary": "^1.11.0",
     "connect-ensure-login": "^0.1.1",
     "connect-flash": "^0.1.1",
@@ -18,6 +19,7 @@
     "express": "~4.16.0",
     "express-session": "^1.15.6",
     "hbs": "~4.0.1",
+    "jquery": "^3.3.1",
     "mongoose": "~4.13.4",
     "morgan": "~1.9.0",
     "multer": "^1.3.1",
@@ -26,6 +28,7 @@
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
+    "popper.js": "^1.14.3",
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
